--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ body{
 }
 
 
-
+/* courses and stuff tabs */
 
 .blue-courses-bar{
     width: 100vw;
@@ -314,16 +314,46 @@ body{
 .random-bow-change{
     width: 22%;
     margin-right: 5%;
-    line-height: 5;
+    line-height: 1.5;
     font-size: 20px;
     text-align: center;
     cursor: pointer;
     background-color: rgb(255, 255, 255);
     box-shadow: 10px 0px 30px -10px rgba(0,0,0,0.3);
-    border-bottom: 5px solid rgb(106, 62, 152);
+    
     color: rgb(46, 46, 46);
     border-radius: 3px;
+    padding-top: 20px;
     
+}
+
+.courses-blue{
+    border-bottom: 5px solid rgb(106, 62, 152);
+}
+.tuition-and-fees-tab{
+    border-bottom: 5px solid #f29718;
+}
+.how-to-apply-tab{
+    border-bottom: 5px solid #3dcbbe;
+}
+
+.scholarship-tab{
+    border-bottom: 5px solid #c83795;
+}
+
+.blue-nav-above-empty-box{
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.blue-nav-above-empty-box h2{
+    font-size: 20px;
+    margin: 0;
+    font-weight: bold;
+}
+
+.blue-nav-above-empty-box p{
+    font-size: 12px;
 }
 
 .last-box-blue-bar{
@@ -332,8 +362,236 @@ body{
 
 .courses-blue:hover,
 .random-bow-change:hover{
-    background-color: rgb(197, 197, 197);
+    background:linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1));
 }
+
+
+/* tuition and fees main style */
+
+.main-content-tuition-and-fees{
+    width: 100vw;
+}
+
+.container-for-main-content-tuition-and-fees{
+    width: 1400px;
+    margin: 0 auto;
+    border-top: 5px solid #f29718;
+    background-color: #f3f3f3;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.list-header{
+    font-weight: bold;
+    margin: 20px 0;
+}
+
+.container-for-three-div{
+    padding:30px;
+    
+}
+
+.three-div li span{
+    font-weight: bold;
+}
+
+.three-div{
+    width: 33%;
+}
+
+.container-for-three-div{
+    display: flex;
+}
+
+.main-list-header{
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.container-for-main-content-tuition-and-fees p{
+    width: 1300px;
+    margin: 0 auto;
+    font-size: 12px;
+    font-weight: bold;
+    padding-bottom: 30px;
+}
+
+/* main-content-how-to-apply    */
+
+.main-content-how-to-apply{
+    width: 100vw;
+    
+}
+
+.container-for-main-content-how-to-apply{
+    width: 1400px;
+    margin: 0 auto;
+    border-top: 5px solid #3dcbbe;
+    display: flex;
+    background-color: #f3f3f3;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container-for-main-content-how-to-apply ul li{
+    list-style-type: disc;
+    margin-left: 25px;
+    font-size: 18px;
+}
+
+.container-for-main-content-how-to-apply ul{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container-for-main-content-how-to-apply li span{
+    font-weight: bold;
+}
+
+.container-for-main-content-how-to-apply h2{
+    font-weight: bold;
+    font-size: 24px;
+}
+.container-for-main-content-how-to-apply p{
+    font-size: 18px;
+}
+
+.left-box-main-content-how-to-apply{
+    font-family: 'Catamaran', sans-serif;
+    padding: 30px;
+}
+
+/* Application box  */
+
+.applicant-box-how-to-apply{
+    border: 1px solid grey;
+    line-height: 3;
+    width: 600px;
+    cursor:pointer;
+}
+
+.applicant-box-hta{
+    display: flex;
+    border-top: 1px solid grey;
+    background-color: #fff;
+}
+
+.applicant-title{
+    width: 500px;
+}
+
+.open-applicant{
+    background-color: #91c432;
+    color: #fff;
+    text-align: center;
+    width: 100px;
+    font-size: 20px;
+}
+/*  right box how to apply    */
+
+.right-box-main-content-how-to-apply{
+    font-size: 18px;
+    font-family: 'Catamaran', sans-serif;
+}
+
+.two-button-right-box-hta{
+    display: flex;
+
+    cursor: pointer;
+
+}
+
+.two-button-apply-hta:hover,
+.two-button-how-to-hta:hover{
+    background: linear-gradient(rgba(29, 41, 207, 0.2), rgba(26, 88, 204, 0.2));
+}
+
+.two-button-apply-hta{
+    padding: 10px 15px;
+    background-color: rgb(0,160,223);
+    border: 2px solid #0090c9;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.two-button-how-to-hta{
+    padding: 10px 15px;
+    color: #00a0df;
+    border: 2px solid #00a0df;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.top-part-right-box-hta{
+    padding-bottom: 40px;
+    border-bottom: 1px solid #a3a3a3;
+}
+
+.right-box-main-content-how-to-apply h3{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+/* main content scholarship */
+
+.main-content-scholarsip{
+    width: 100vw;
+    background-color: #fff;
+}
+
+.container-for-main-content-scholarship{
+    width: 1400px;
+    margin: 0 auto;
+    border-top: 5px solid #c83795;
+    padding: 30px;
+    background-color: #f3f3f3;
+    box-shadow: 10px 0px 20px -10px rgba(0,0,0,0.3);
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.scholarship-awards{
+    display: flex;
+    background-color: #fff;
+    border-radius: 3px;
+    line-height: 2.5;
+    padding: 0 10px;
+    width: 1000px;
+    font-size: 18px;
+    border: 2px solid #dfdfdf;
+    font-family: 'Catamaran', sans-serif;
+    cursor: pointer;
+}
+
+.scholar-price{
+    font-family: "Montserrat", Helvetica, sans-serif;
+    margin-right: 20px;
+    
+}
+
+
+
+.scholarship-awards:hover{
+    background-color: rgb(219, 218, 218);
+    transition: 0.4s;
+}
+
+.container-for-main-content-scholarship h2{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.null{
+    margin-bottom: 24px;
+    font-size: 18px;
+    width: 1037px;
+    font-family: 'Catamaran', sans-serif;
+}
+
+
+
 
 /*
     Empty BOX
@@ -433,6 +691,7 @@ body{
     margin: 0 auto;
     transition: 0.5s;
     border-bottom: 1px solid #b3b3b3;
+    background-color: #fff;
 }
 
 .table-header{
@@ -441,6 +700,7 @@ body{
     margin: 0 auto;
     font-weight: bold;
     margin-bottom: 20px;
+    
 }
 
 .colspan-1-h{
@@ -484,7 +744,7 @@ body{
 }
 
 .drop-downs{
-    width: 100vw;
+    
     
     background-color: rgb(245, 247, 250);
     
@@ -492,20 +752,10 @@ body{
 
 .table-content{
     width: 80%;
-    margin: 5px auto;
+    margin: 0px auto;
     background-color: #3daef080;
     
     
-}
-
-.slide-down{
-    max-height: 200px;
-    padding: 20px 40px;
-}
-
-.slide-up{
-    max-height: 0px;
-    padding: 0px;
 }
 
 
@@ -538,29 +788,33 @@ body{
 }
 
 .drop-down-for-courses{
-    width: 1400px;
-    margin: 0px auto;
+    
+    
     background-color: #f3f3f3;
     
     margin-bottom: 0px;
     
     box-shadow: 10px 0px  30px -10px rgba(0,0,0,0.5);
-    border-left: 5px solid #0090c9;
+    border-top: 5px solid rgb(106, 62, 152);
     border-radius: 5px;
-    transition: 0.3s ease-in-out;
+    width: 1400px;
+    margin: 0 auto;
     overflow-y: hidden;
-    max-height: 0px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    
     
 }
 
 .drop-down-for-courses h4{
     width: 80%;
-    margin: 0px auto;
+    
     padding-top: 30px;
     padding-bottom: 30px;
     font-weight: bold;
     font-size: 20px;
-    
+    margin: 0 auto;
 }
 
 .level-one-required-course, 
@@ -580,18 +834,6 @@ body{
     text-align: left;
     height: 50px;
     font-weight: bold;
-}
-
-.slide-up{
-    max-height: 0px;
-    transition: all 0.5s ease-in-out;
-    overflow-y: hidden;
-    padding: 0px;
-}
-
-.slide-down{
-    max-height: 200px;
-    
 }
 
 .slider{
@@ -618,6 +860,58 @@ body{
     width: 100%;
 }
 
+
+
+/* main overview dropdown div style */
+
+.main-courses-dropdown-div{
+    overflow-y: hidden;
+}
+/*  container for main courses dropdown div */
+
+.container-for-main-courses-dropdown-div{
+    display: flex;
+    width: 1400px;
+    margin: 0 auto;
+    background-color: blue;
+    padding: 20px 30px;
+    
+   
+    
+}
+
+/*  left side overview tab  */
+
+.left-side-main-over-dropdown{
+    width: 400px;
+    height: 400px;
+    background-color: red;
+    border-radius: 0px 0px 0px 0px;
+    padding-left: 50px;
+    padding-top: 40px;
+    color: #fff;
+    padding-right: 30px;
+    margin-right: 20px;
+}
+
+.left-side-main-over-dropdown ul li{
+    line-height: 3;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    cursor: pointer;
+    
+}
+
+.left-side-main-over-dropdown ul li:hover{
+    background-color: #0090c9;
+    border-radius: 3px;
+}
+
+/*  Right side overview tab */
+
+.right-side-main-over-dropdown{
+    width: 70%;
+}
 
 /*
     Information ABout the program
@@ -721,6 +1015,11 @@ body{
     
 }
 
+.wha-you-will-learn-list li{
+    list-style-type: disc;
+    margin-left: 30px;
+}
+
 .main-content-what-you-will-learn p{
     margin-bottom: 40px;
 }
@@ -799,7 +1098,8 @@ body{
 .career-opportunities-tab:hover,
 .certification-tab:hover,
 .contacts-tab:hover{
-    background-color: #a3a3a3;
+    background-color: rgb(0, 141, 197);
+    color: #fff;
 }
 
 
@@ -816,8 +1116,8 @@ body{
 }
 
 .box-left-career-op{
-    border:2px solid #91c432;
-    background-color: rgb(211, 231, 173);
+    
+    
     width: 433px;
     padding: 15px;
     margin-right: 35px;
@@ -876,6 +1176,119 @@ body{
     margin-bottom: -1px;
     margin-top: -1px;
 }
+
+.bottom-box-career-opportunities{
+    display: flex;
+}
+
+.left-bottom-box-career-opportunities{
+    width: 500px;
+    
+}
+
+.left-bottom-box-career-opportunities p{
+    margin-bottom: 20px;
+}
+
+.game-companies{
+    border: 2px solid #e0dfdf;
+    margin-bottom: -1px;
+    font-size: 12px;
+    border-radius: 3px;
+    
+    cursor:pointer;
+}
+
+.hidden-game-companies{
+    
+    background-color: #d1d0d0;
+    width: 500px;
+    overflow-y:hidden;
+    border-radius: 3px;
+}
+
+
+
+.game-companies:hover{
+    background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1));
+    transition: 0.4s;
+}
+
+.game-companies p{
+    
+    
+    margin: auto 0;
+    
+    font-size: 24px;
+    text-align: center;
+    line-height: 3;
+
+    
+}
+
+.hidden-game-companies p{
+    padding: 10px 15px;
+}
+
+.hidden-game-companies img{
+    width: 150px;
+    margin: 0 175px;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+
+.left-bottom-box-career-opportunities p{
+    font-size: 20px;
+    
+}
+
+.inside-list-wywl{
+    
+    margin-left: 40px;
+    margin-bottom: 10px;
+}
+
+.inside-list-wywl li{
+    list-style-type: square;
+}
+
+
+
+
+.left-bottom-box-career-opportunities h2{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.right-bottom-box-career-opportunities{
+    width: 740px;
+    padding: 30px;
+    padding-top: 0px;
+    cursor:pointer;
+    
+}
+
+.right-bottom-box-career-opportunities h2{
+    font-weight: bold;
+}
+
+.hidden-game-programmer-career-wik{
+    max-height: 0px;
+    overflow-y: hidden;
+    font-size: 18px;
+    padding: 0 15px;
+}
+
+.game-programmer-career-wikepidea h3{
+    font-size: 18px;
+    font-weight: bold;
+    border-bottom: 1px solid #e2e2e2;
+    padding: 10px 15px;
+}
+
+
 
 
 /*      Certification Styles    */
@@ -1316,4 +1729,65 @@ Bottom area footer
 
 .context-inside-this p img:hover{
     opacity: 1;
+}
+
+.slide-down{
+    max-height: 400px;
+    transition: 0.5s;
+}
+
+.slide-up{
+    max-height: 0px;
+    transition: 0.5s;
+}
+
+.bottom-paragraph-overview p{
+    font-size: 18px;
+    margin: 0;
+    width: 200px;
+    font-weight: bold;
+    height: 26px;
+    margin: auto 0;
+    margin-left: auto;
+}
+
+.bottom-paragraph-overview h3{
+    font-size: 18px;
+    width: 220px;
+    color: #329df5;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+    
+}
+
+.grad-employent-rate{
+    display: flex;
+}
+.average-salary{
+    display: flex;
+}
+
+.four-tabs-active-1{
+    border: 0px;
+    background-color: #6a3e98;
+    color: #fff;
+}
+
+.four-tabs-active-2{
+    border: 0px;
+    background-color: #f29718;
+    color: #fff;
+}
+
+.four-tabs-active-3{
+    border: 0px;
+    background-color: #3dcbbe;
+    color: #fff;
+}
+
+.four-tabs-active-4{
+    border: 0px;
+    background-color: #c83795;
+    color: #fff;
 }
