--- a/css/style.css
+++ b/css/style.css
@@ -1754,7 +1754,7 @@ Bottom area footer
     font-weight: bold;
     height: 26px;
     margin: auto 0;
-    margin-left: auto;
+    margin-left: 30px;
 }
 
 .bottom-paragraph-overview h3{
