--- a/css/style.css
+++ b/css/style.css
@@ -395,8 +395,15 @@ body{
     font-weight: bold;
 }
 
+.elective-wywl-list{
+    list-style-type: disc;
+    margin-left: 30px;
+}
+
 .three-div{
-    width: 33%;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container-for-three-div{
@@ -1754,7 +1761,7 @@ Bottom area footer
     font-weight: bold;
     height: 26px;
     margin: auto 0;
-    margin-left: 30px;
+    margin-left: auto;
 }
 
 .bottom-paragraph-overview h3{
